# OthelloProject

./: CMakeLists.txt  JukeBox.cpp  JukeBox.hpp  Othello.cbp  Othello.depend  Othello.layout  README.md  StateManager.cpp  StateManager.hpp  main.cpp
GameObjects/: Board.hpp  Piece.hpp  Slot.hpp
States/: CreditsState.cpp  MainMenuState.cpp  MainMenuState.hpp  PlayState.cpp  PlayState.hpp  StatState.cpp  StatState.hpp  State.hpp
include/: Board.hpp  CreditsState.hpp  JukeBox.hpp  MainMenuState.hpp  PlayState.hpp  Slot.hpp  StatState.hpp  State.hpp  StateManager.hpp
src/: CMakeLists.txt  CreditsState.cpp  JukeBox.cpp  MainMenuState.cpp  PlayState.cpp  StatState.cpp  StateManager.cpp  main.cpp
